--- a/app/src/main/res/layout/fragment_register_email.xml
+++ b/app/src/main/res/layout/fragment_register_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Auth.RegisterEmailFragment">
+    tools:context=".auth.ui.view.RegisterEmailFragment">
 
     <TextView
         android:id="@+id/tv_title"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="@dimen/et_height"
         android:layout_marginStart="28dp"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_username"
+        app:layout_constraintTop_toBottomOf="@+id/et_email"
         android:layout_marginTop="16dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="28dp"
@@ -80,7 +80,10 @@
         android:text="Lanjutkan"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:background="@color/blue_inactive"
+        android:background="@color/blue"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         />
 
     <TextView
@@ -100,6 +103,17 @@
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:background="@color/white_transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
