--- a/app/src/main/res/layout/fragment_login_email.xml
+++ b/app/src/main/res/layout/fragment_login_email.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Auth.LoginEmailFragment">
+    tools:context=".auth.ui.view.LoginEmailFragment">
 
     <TextView
         android:id="@+id/tv_title"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="@dimen/et_height"
         android:layout_marginStart="28dp"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_username"
+        app:layout_constraintTop_toBottomOf="@+id/et_email"
         android:layout_marginTop="16dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="28dp"
@@ -79,8 +79,8 @@
         android:text="Masuk"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:background="@color/blue_inactive"
-        android:clickable="false"
+        android:background="@color/blue"
+        android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         />
