--- a/app/src/main/res/layout/fragment_login_google.xml
+++ b/app/src/main/res/layout/fragment_login_google.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Auth.LoginGoogleFragment">
+    tools:context=".auth.ui.view.LoginGoogleFragment">
 
     <TextView
         android:id="@+id/tv_title"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="@dimen/et_height"
         android:layout_marginStart="28dp"
@@ -48,11 +48,14 @@
         android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_username"
+        app:layout_constraintTop_toBottomOf="@+id/et_email"
         android:text="Lanjutkan"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:background="@color/blue_inactive"
+        android:background="@color/blue"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         />
 
     <TextView
