--- a/app/src/main/res/layout/fragment_welcome_page.xml
+++ b/app/src/main/res/layout/fragment_welcome_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Auth.WelcomePageFragment"
+    tools:context=".auth.ui.view.WelcomePageFragment"
     android:background="@color/grey_light"
     >
 
@@ -114,5 +114,17 @@
             android:focusable="true"/>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:background="@color/white_transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
