--- a/app/src/main/res/layout/fragment_detail_comment.xml
+++ b/app/src/main/res/layout/fragment_detail_comment.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main.ui.view.postdetail.DetailCommentFragment"
-    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
-    >
+    android:background="@color/white">
 
     <View
         android:id="@+id/actionbar"
@@ -49,38 +49,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_photo_profile"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_photo_profile"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@color/green_success"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmer_photo_profile"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintStart_toStartOf="@id/iv_photo_profile"
-            app:layout_constraintTop_toTopOf="@id/iv_photo_profile"
-            shimmer:duration="800"
+            app:layout_constraintTop_toTopOf="parent"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="0dp"
             >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <View
+                android:id="@+id/iv_photo_profile"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                />
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/bg_photo_shimmer"
-                    />
-
-            </LinearLayout>
-
-
-        </com.facebook.shimmer.ShimmerFrameLayout>
+        </androidx.cardview.widget.CardView>
 
         <EditText
             android:id="@+id/et_comment"
@@ -90,9 +75,9 @@
             android:layout_marginEnd="8dp"
             android:background="@color/transparent"
             android:hint="Tambahkan komentar..."
-            app:layout_constraintBottom_toBottomOf="@id/iv_photo_profile"
-            app:layout_constraintStart_toEndOf="@id/iv_photo_profile"
+            app:layout_constraintBottom_toBottomOf="@id/cv_photo_profile"
             app:layout_constraintEnd_toStartOf="@id/tv_post"
+            app:layout_constraintStart_toEndOf="@id/cv_photo_profile"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -101,101 +86,103 @@
             android:layout_height="wrap_content"
             android:hint="Posting"
             android:textColor="@color/grey_text"
-            app:layout_constraintBottom_toBottomOf="@id/iv_photo_profile"
+            app:layout_constraintBottom_toBottomOf="@id/cv_photo_profile"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_photo_profile" />
+            app:layout_constraintTop_toTopOf="@id/cv_photo_profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/comment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/actionbar">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/comment"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/actionbar">
+            android:layout_height="wrap_content"
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/iv_owner_photo"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_owner_photo"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_margin="16dp"
-                    android:src="@color/green_success"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/shimmer_owner_photo"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    app:layout_constraintStart_toStartOf="@id/iv_owner_photo"
-                    app:layout_constraintTop_toTopOf="@id/iv_owner_photo"
-                    shimmer:duration="800"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:cardCornerRadius="50dp"
+                    app:cardElevation="0dp"
                     >
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <View
+                        android:id="@+id/iv_owner_photo"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        />
 
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/bg_photo_shimmer"
-                            />
+                </androidx.cardview.widget.CardView>
 
-                    </LinearLayout>
-
-
-                </com.facebook.shimmer.ShimmerFrameLayout>
+<!--                <ImageView-->
+<!--                    android:id="@+id/iv_owner_photo"-->
+<!--                    android:layout_width="32dp"-->
+<!--                    android:layout_height="32dp"-->
+<!--                    android:layout_margin="16dp"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
                 <TextView
                     android:id="@+id/tv_owner_desc"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="64dp"
                     android:text="Desc here"
-                    app:layout_constraintStart_toEndOf="@id/iv_owner_photo"
-                    app:layout_constraintTop_toTopOf="@id/iv_owner_photo" />
+                    android:layout_marginEnd="12dp"
+                    app:layout_constraintStart_toEndOf="@id/cv_owner_photo"
+                    app:layout_constraintTop_toTopOf="@id/cv_owner_photo" />
 
                 <TextView
                     android:id="@+id/tv_owner_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="date here"
-                    android:textSize="@dimen/small"
                     android:textColor="@color/grey_text"
-                    app:layout_constraintStart_toStartOf="@id/tv_owner_desc"
-                    app:layout_constraintTop_toBottomOf="@id/tv_owner_desc"
-                    />
+                    android:textSize="@dimen/small"
+                    android:layout_marginStart="64dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_owner_desc" />
 
                 <View
                     android:id="@+id/line"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@drawable/bg_line_grey"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_owner_date"
+                    android:background="@drawable/bg_line_grey"
                     app:layout_constraintStart_toStartOf="parent"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tv_owner_date" />
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:nestedScrollingEnabled="false"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/line"
                     tools:listitem="@layout/item_comment" />
 
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         </androidx.core.widget.NestedScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -208,9 +195,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/white_transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
