--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -2,62 +2,69 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <ImageView
-        android:id="@+id/iv_photo"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_photo_comment"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_margin="16dp"
-        android:src="@color/green_success"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmer_photo"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        app:layout_constraintStart_toStartOf="@id/iv_photo"
-        app:layout_constraintTop_toTopOf="@id/iv_photo"
-        shimmer:duration="800"
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="0dp"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <View
+            android:id="@+id/iv_photo_comment"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bg_photo_shimmer"
-                />
+    </androidx.cardview.widget.CardView>
 
-        </LinearLayout>
+<!--    <ImageView-->
+<!--        android:id="@+id/iv_photo_comment"-->
+<!--        android:layout_width="32dp"-->
+<!--        android:layout_height="32dp"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:background="@drawable/bg_circle"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-
-    </com.facebook.shimmer.ShimmerFrameLayout>
+    <TextView
+        android:id="@+id/iv_photo_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/cv_photo_comment"
+        app:layout_constraintBottom_toBottomOf="@id/cv_photo_comment"
+        app:layout_constraintStart_toStartOf="@id/cv_photo_comment"
+        app:layout_constraintEnd_toEndOf="@id/cv_photo_comment"
+        android:text="A"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        />
 
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="12dp"
         android:text="Desc here"
-        app:layout_constraintStart_toEndOf="@id/iv_photo"
-        app:layout_constraintTop_toTopOf="@id/iv_photo" />
+        app:layout_constraintStart_toEndOf="@id/cv_photo_comment"
+        app:layout_constraintTop_toTopOf="@id/cv_photo_comment" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="date here"
-        android:textSize="@dimen/small"
         android:textColor="@color/grey_text"
-        app:layout_constraintStart_toStartOf="@id/tv_desc"
-        app:layout_constraintTop_toBottomOf="@id/tv_desc"
-        />
+        android:textSize="@dimen/small"
+        android:layout_marginStart="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
